fix link container positioning for blurred questions

--- a/style.css
+++ b/style.css
@@ -55,8 +55,8 @@ body
 
 .linkContainer
 {
-	position: relative;
-	top: -50px;
+	position: absolute;
+	top: 0;
 	width: 50px;
 	height: 50px;
 	opacity: 0.9;
